# openeo-processes-dask-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: make_embeddings.ipynb  make_embeddings.py  prithvi_v2_item.json  terramind_item.json  terramind_item_full.json
examples/mlm_items/: prithvi_v2_item.json  terramind_item.json
minibackend/: __init__.py  custom_processes.py  execute_graph.py  openeo_minibackend.py
ml_datacube_bridge/: README.md
ml_datacube_bridge/output_preprocessing_functions/: torch_vit_encoder_tools.py
opd_ml_dev_utils/: execute.py  get_datacube.py  graph.json
openeo_processes_dask_ml/: __init__.py
openeo_processes_dask_ml/process_implementations/: __init__.py  constants.py  data_model.py  exceptions.py  load_model.py  ml_predict.py
openeo_processes_dask_ml/process_implementations/data_model/: __init__.py  data_model.py  onnx_model.py  torch_model.py
openeo_processes_dask_ml/process_implementations/utils/: dim_utils.py  download_utils.py  epsg_utils.py  model_cache_utils.py  proc_expression_utils.py  scaling_utils.py
openeo_processes_dask_ml/specs/: __init__.py
openeo_processes_dask_ml/specs/openeo-processes-ml/: load_ml_model.json  ml_predict.json
tests/: conftest.py  test_datamodel.py  test_datamodel_resolve_batches.py  test_minibackend.py
tests/cassettes/test_datamodel/: test_download_model[https---filesamples.com-samples-font-bin-slick.bin].yaml  test_download_model[s3---sentinel-cogs-sentinel-s2-l2a-cogs-35-X-LE-2025-5-S2C_35XLE_20250513_0_L2A-S2C_35XLE_20250513_0_L2A.json].yaml  test_download_model_http.yaml  test_download_model_http_fail.yaml  test_download_model_s3.yaml  test_get_model.yaml
tests/dummy/: dummy_ml_model.py
tests/utils/: test_dim_utils.py  test_download_utils.py  test_epsg_utils.py  test_model_cache_utils.py  test_model_scaling_utils.py  test_proc_expression_utils.py
tests/utils/cassettes/test_download_utils/: test_download[https---filesamples.com-samples-font-bin-slick.bin].yaml  test_download[s3---sentinel-cogs-sentinel-s2-l2a-cogs-35-X-LE-2025-5-S2C_35XLE_20250513_0_L2A-S2C_35XLE_20250513_0_L2A.json].yaml  test_download_http.yaml  test_download_model_http_fail.yaml  test_download_model_s3.yaml
tests/utils_for_testing/: tmp_folder.py
