[tool.poetry]
name = "openeo-processes-dask-ml"
version = "0.1.0"
description = "Implementation for openEO ML processes, built to extend openeo-processes-dask"
authors = ["Jonas Hurst <jhurst@uni-muenster.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
openeo-processes-dask = {extras = ["implementations"], version = "^2025.7.1"}
boto3 = "^1.38.14"
stackstac = "^0.5.1"
# remove this once mlm-extension is merged into upstream pystac, and openeo-processes-dask allows this as depdendency
pystac = {git = "https://github.com/jonas-hurst/pystac", rev = "v1.11OWN"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-recording = "^0.13.4"
matplotlib = "^3.10.3"
black = "^25.1.0"
pre-commit = "^4.2.0"
notebook = "^7.4.4"
graphviz = "^0.21"



[tool.poetry.group.onnx.dependencies]
onnxruntime-gpu = "^1.22.0"
onnx = "^1.18.0"


[tool.poetry.group.torch.dependencies]
torch = "2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
#filterwarnings = ["error"]
#addopts = "--block-network --record-mode=none"
addopts = "--block-network --record-mode=new_episodes"
